--- a/Exercice - 01 - Mur hanté/index.html
+++ b/Exercice - 01 - Mur hanté/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mur hanté</title>
     <link rel="stylesheet" href="css/global.css">
-    <script> const spookie_count = 6</script>
+    <script> const spookie_count = 6</script> //nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn
     <script src="js/sprites/Frame.js"></script>
     <script src="js/javascript.js"></script>
     <script src="https://notes-de-cours.com/dev/toggle-lab-info.js"></script>
