--- a/Exercice - 01 - Mur hanté/index.html
+++ b/Exercice - 01 - Mur hanté/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/global.css">
     <script> const spookie_count = 6</script> //nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn
     <script src="js/sprites/Frame.js"></script>
-    <script src="js/javascript.js"></script>
+    <script src="js/javascript.js"></script> // yoooolooo
     <script src="https://notes-de-cours.com/dev/toggle-lab-info.js"></script> // hero
-    
+
 </head>
 <body>
-    <div class="frame frame1">
+    <div class="frame frame1"> 
 
         <div class="image-container">
             
