--- a/Exercice - 01 - Mur hanté/index.html
+++ b/Exercice - 01 - Mur hanté/index.html
@@ -7,21 +7,11 @@
     <link rel="stylesheet" href="css/global.css">
     <script> const spookie_count = 6</script> //nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn jacinto
     <script src="js/sprites/Frame.js"></script>
-<<<<<<< HEAD
     <script src="js/javascript.js"></script>
-    <script src="https://notes-de-cours.com/dev/toggle-lab-info.js"></script> 
+    <script src="https://notes-de-cours.com/dev/toggle-lab-info.js"></script> //sasdasasdasda POIL
 </head>
 <body>
     <div class="frame frame1">
-=======
-    <script src="js/javascript.js"></script> // yoooolooo
-    <script src="https://notes-de-cours.com/dev/toggle-lab-info.js"></script> // hero
-
-</head>
-<body>
-    <div class="frame frame1"> 
-
->>>>>>> 68dbc2dfac4a37162085397afd9644a3c557f87b
         <div class="image-container">
             <img src="img/frame-1.png" alt="Frame 1" id="frame-1">
             <img src="img/frame-1-evil.png" alt="Frame1" id="frame-1-evil">
@@ -31,7 +21,7 @@
         <div class="image-container">
             <img src="img/frame-2.png" alt="Frame 2" id="frame-2">
 
-            <img src="img/frame-2-evil.png" alt="Frame2" id="frame-2-evil"> 
+            <img src="img/frame-2-evil.png" alt="Frame2" id="frame-2-evil">
 
         </div>
     </div>
